--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
- <h1> El Pingüino: Un Villano Complejo en el Universo de Batman</h1>
+ <h1 style="background-color: aquamarine;color: rgb(107, 22, 103); text-decoration: underline dashed;"> El Pingüino: Un Villano Complejo en el Universo de Batman</h1>
     <p>
         El Pingüino, cuyo verdadero nombre es <i>Oswald Chesterfield Cobblepot</i>, es uno de los villanos más icónicos dentro del universo de <b>Batman</b>. Introducido por primera vez en el número 58 de "Detective Comics" en 1941, se ha mantenido como una presencia constante en Gotham City, siendo un adversario tanto para Batman como para otros personajes que habitan este mundo oscuro y sombrío. A diferencia de muchos villanos, el Pingüino no es una figura que depende de la locura o la fuerza física para destacar. En lugar de ello, se caracteriza por su intelecto, su astucia y su capacidad para operar en las sombras del crimen organizado. <br>
 
@@ -35,7 +35,7 @@
 
         
     </p>
-
+<img src="imagenes/reacciones-de-facebook.png" alt="emoji chistoso" srcset="">
 
 
 
